--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				<a class="nav-link" aria-current="page" href="#">Home</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="#">About</a>
+				<a class="nav-link" href="#">Marin</a>
 			  </li>
 			  <li class="nav-item">
 				<a class="nav-link" href="#">Portfolio</a>
