project responsive done

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" href="./images/favicon.png" type="icon/image">
-	<title>Dizme jQuery Bootstrap</title>
+	<title>Dizme</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/all.min.css">
 	<link rel="stylesheet" href="css/aos.css">
@@ -29,21 +29,36 @@
           Preloader Start
     ========================= -->
 	<div class="preloaderDiv">
-        <div class="left"></div>
-        <div class="animation_line"></div>
-        <div class="right"></div>
-      </div>
+		<div class="left"></div>
+		<div class="animation_line"></div>
+		<div class="right"></div>
+	</div>
     <!-- ========================
           Preloader End
     ========================= -->
-
-	<!-- Back to Top Star -->
+	<!-- ========================
+          Back to Top Start
+    ========================= -->
 	<div class="back_to_top">
+		<a href="#">TO TOP</a>
+		<div class="line">
+		  <span class="process_line"></span>
+		</div>
+	</div>
+	<!-- ========================
+          Back to Top end
+    ========================= -->
+	<!-- ========================
+          Back to Top (orange) Start
+    ========================= -->
+	<!-- <div class="back_to_top">
 		<a href="#">
 			<i class="fa-solid fa-chevron-up"></i>
 		</a>
-	</div>
-	<!-- Back to Top End -->
+	</div> -->
+	<!-- ========================
+          Back to Top (orange) End
+    ========================= -->
 	<!-- Nav Part Star -->
 	<nav class="navbar navbar-expand-lg" id="navbar">
 		<div class="container">
@@ -138,7 +153,7 @@
 	
 	<!-- Nav Part End -->
 	<!-- Banner Part Star -->
-	<section id="banner">
+	<section id="banner" >
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-lg-12 d-lg-none">
@@ -404,7 +419,7 @@
 		</div>
 		
 		<div class="container">
-			<div class="section_heading">
+			<div class="text section_heading">
 				<h3>Portfolio</h3>
 				<h4>
 					My Amazing Works
@@ -428,6 +443,10 @@
 							<a class="youtube_play" data-autoplay="true" data-vbtype="video" href="https://www.youtube.com/watch?v=7e90gBu4pas">
 								<img class="img-fluide w-100" src="images/Mockup Shape.jpg" alt="images">
 							</a>
+							<div class="titel">
+								<h4>Mockup Shape</h4>
+								<p>Youtube</p>
+							</div>
 						</div>
 						<div class="tile scale-anm port_item popup">
 							<a class="image-popup" data-gall="gallery01" href="images/Art Stone.jpg">
@@ -581,7 +600,7 @@
 				<div class="col-lg-6 right">
 					<div class="skill_image">
 						<div class="image">
-							<img src="images/skill.jpg" alt="">
+							<img class="img-fluid w-100" src="images/skill.jpg" alt="">
 						</div>
 					</div>
 				</div>
@@ -971,7 +990,7 @@
 		<div class="container">
 			<div class="brand_main">
 				<div class="row g-0">
-					<div class="col-lg-3">
+					<div class="col-md-6 col-lg-3">
 						<div class="brand_item">
 							<div class="image" data-aos="fade-right" data-aos-delay="900" data-aos-easing="ease-in-sine" data-aos-duration="600">
 								<a href="#">
@@ -980,7 +999,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-3">
+					<div class="col-md-6 col-lg-3">
 						<div class="brand_item">
 							<div class="image" data-aos="fade-right" data-aos-delay="1200" data-aos-easing="ease-in-sine" data-aos-duration="800">
 								<a href="#">
@@ -989,7 +1008,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-3">
+					<div class="col-md-6 col-lg-3">
 						<div class="brand_item">
 							<div class="image" data-aos="fade-right" data-aos-delay="1500" data-aos-easing="ease-in-sine" data-aos-duration="1000">
 							<a href="#">
@@ -997,7 +1016,7 @@
 							</a>
 						</div></div>
 					</div>
-					<div class="col-lg-3">
+					<div class="col-md-6 col-lg-3">
 						<div class="brand_item br_none">
 							<div class="image" data-aos="fade-right" data-aos-delay="1800" data-aos-easing="ease-in-sine" data-aos-duration="1200">
 								<a href="#">
@@ -1006,8 +1025,8 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-3">
-						<div class="brand_item bb_none">
+					<div class="col-md-6 col-lg-3">
+						<div class="brand_item ">
 							<div class="image" data-aos="fade-right" data-aos-delay="2100" data-aos-easing="ease-in-sine" data-aos-duration="1400">
 								<a href="#">
 									<img class="img-fluid" src="images/brand_5.png" alt="icon">
@@ -1015,8 +1034,8 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-3">
-						<div class="brand_item bb_none">
+					<div class="col-md-6 col-lg-3">
+						<div class="brand_item ">
 							<div class="image" data-aos="fade-right" data-aos-delay="2400" data-aos-easing="ease-in-sine" data-aos-duration="1600">
 								<a href="#">
 									<img class="img-fluid" src="images/brand_6.png" alt="icon">
@@ -1024,7 +1043,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-3">
+					<div class="col-md-6 col-lg-3">
 						<div class="brand_item bb_none">
 							<div class="image" data-aos="fade-right" data-aos-delay="2700" data-aos-easing="ease-in-sine" data-aos-duration="1800">
 								<a href="#">
@@ -1033,9 +1052,82 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-3">
+					<div class="col-md-6 col-lg-3">
 						<div class="brand_item bb_none br_none">
 							<div class="image" data-aos="fade-right" data-aos-delay="3000" data-aos-easing="ease-in-sine" data-aos-duration="2000">
+								<a href="#">
+									<img class="img-fluid" src="images/brand_8.png" alt="icon">
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row g-0 d-sm-none">
+					<div class="col-lg-3 col-md-6 col-6">
+						<div class="brand_item">
+							<div class="image">
+								<a href="#">
+									<img class="img-fluid" src="images/brand_1.png" alt="icon">
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-3 col-md-6 col-6">
+						<div class="brand_item br_none">
+							<div class="image">
+								<a href="#">
+									<img class="img-fluid h-100" src="images/brand_2.png" alt="icon">
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-3 col-md-6 col-6">
+						<div class="brand_item">
+							<div class="image">
+							<a href="#">
+								<img class="img-fluid" src="images/brand_3.png" alt="icon">
+							</a>
+						</div></div>
+					</div>
+					<div class="col-sm-3 col-md-6 col-6">
+						<div class="brand_item br_none">
+							<div class="image">
+								<a href="#">
+									<img class="img-fluid" src="images/brand_4.png" alt="icon">
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-3 col-md-6 col-6">
+						<div class="brand_item">
+							<div class="image">
+								<a href="#">
+									<img class="img-fluid" src="images/brand_5.png" alt="icon">
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-3 col-md-6 col-6">
+						<div class="brand_item br_none">
+							<div class="image">
+								<a href="#">
+									<img class="img-fluid" src="images/brand_6.png" alt="icon">
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-3 col-md-6 col-6">
+						<div class="brand_item bb_none">
+							<div class="image">
+								<a href="#">
+									<img class="img-fluid" src="images/brand_7.png" alt="icon">
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-3 col-md-6 col-6">
+						<div class="brand_item bb_none br_none">
+							<div class="image">
 								<a href="#">
 									<img class="img-fluid" src="images/brand_8.png" alt="icon">
 								</a>
@@ -1066,7 +1158,7 @@
 				<div class="col-lg-4">
 					<div class="item">
 						<div class="image" type="button" data-bs-toggle="modal" data-bs-target="#webDevelopmentModal">
-							<img class="img_fluid" src="images/1.jpg" alt="image">
+							<img class="img_fluid w-100 h-100" src="images/1.jpg" alt="image">
 							<div class="overly">
 							</div>
 							<div class="date">
@@ -1116,7 +1208,7 @@
 				<div class="col-lg-4">
 					<div class="item">
 						<div class="image" type="button" data-bs-toggle="modal" data-bs-target="#brandingModal">
-							<img class="img_fluid" src="images/2 (2).jpg" alt="image">
+							<img class="img_fluid w-100 h-100" src="images/2 (2).jpg" alt="image">
 							<div class="overly">
 							</div>
 							<div class="date">
@@ -1168,7 +1260,7 @@
 				<div class="col-lg-4">
 					<div class="item">
 						<div class="image" type="button" data-bs-toggle="modal" data-bs-target="#socialMediaModal">
-							<img class="img_fluid" src="images/3.jpg" alt="image">
+							<img class="img_fluid w-100 h-100" src="images/3.jpg" alt="image">
 							<div class="overly">
 							</div>
 							<div class="date">
