--- a/index.html
+++ b/index.html
@@ -990,7 +990,7 @@
 		<div class="container">
 			<div class="brand_main">
 				<div class="row g-0">
-					<div class="col-md-6 col-lg-3">
+					<div class="col-6 col-lg-3">
 						<div class="brand_item">
 							<div class="image" data-aos="fade-right" data-aos-delay="900" data-aos-easing="ease-in-sine" data-aos-duration="600">
 								<a href="#">
@@ -999,7 +999,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-6 col-lg-3">
+					<div class="col-6 col-lg-3">
 						<div class="brand_item">
 							<div class="image" data-aos="fade-right" data-aos-delay="1200" data-aos-easing="ease-in-sine" data-aos-duration="800">
 								<a href="#">
@@ -1008,7 +1008,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-6 col-lg-3">
+					<div class="col-6 col-lg-3">
 						<div class="brand_item">
 							<div class="image" data-aos="fade-right" data-aos-delay="1500" data-aos-easing="ease-in-sine" data-aos-duration="1000">
 							<a href="#">
@@ -1016,7 +1016,7 @@
 							</a>
 						</div></div>
 					</div>
-					<div class="col-md-6 col-lg-3">
+					<div class="col-6 col-lg-3">
 						<div class="brand_item br_none">
 							<div class="image" data-aos="fade-right" data-aos-delay="1800" data-aos-easing="ease-in-sine" data-aos-duration="1200">
 								<a href="#">
@@ -1025,7 +1025,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-6 col-lg-3">
+					<div class="col-6 col-lg-3">
 						<div class="brand_item ">
 							<div class="image" data-aos="fade-right" data-aos-delay="2100" data-aos-easing="ease-in-sine" data-aos-duration="1400">
 								<a href="#">
@@ -1034,7 +1034,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-6 col-lg-3">
+					<div class="col-6 col-lg-3">
 						<div class="brand_item ">
 							<div class="image" data-aos="fade-right" data-aos-delay="2400" data-aos-easing="ease-in-sine" data-aos-duration="1600">
 								<a href="#">
@@ -1043,7 +1043,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-6 col-lg-3">
+					<div class="col-6 col-lg-3">
 						<div class="brand_item bb_none">
 							<div class="image" data-aos="fade-right" data-aos-delay="2700" data-aos-easing="ease-in-sine" data-aos-duration="1800">
 								<a href="#">
@@ -1052,82 +1052,9 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-6 col-lg-3">
+					<div class="col-6 col-lg-3">
 						<div class="brand_item bb_none br_none">
 							<div class="image" data-aos="fade-right" data-aos-delay="3000" data-aos-easing="ease-in-sine" data-aos-duration="2000">
-								<a href="#">
-									<img class="img-fluid" src="images/brand_8.png" alt="icon">
-								</a>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="row g-0 d-sm-none">
-					<div class="col-lg-3 col-md-6 col-6">
-						<div class="brand_item">
-							<div class="image">
-								<a href="#">
-									<img class="img-fluid" src="images/brand_1.png" alt="icon">
-								</a>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-3 col-md-6 col-6">
-						<div class="brand_item br_none">
-							<div class="image">
-								<a href="#">
-									<img class="img-fluid h-100" src="images/brand_2.png" alt="icon">
-								</a>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-3 col-md-6 col-6">
-						<div class="brand_item">
-							<div class="image">
-							<a href="#">
-								<img class="img-fluid" src="images/brand_3.png" alt="icon">
-							</a>
-						</div></div>
-					</div>
-					<div class="col-sm-3 col-md-6 col-6">
-						<div class="brand_item br_none">
-							<div class="image">
-								<a href="#">
-									<img class="img-fluid" src="images/brand_4.png" alt="icon">
-								</a>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-3 col-md-6 col-6">
-						<div class="brand_item">
-							<div class="image">
-								<a href="#">
-									<img class="img-fluid" src="images/brand_5.png" alt="icon">
-								</a>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-3 col-md-6 col-6">
-						<div class="brand_item br_none">
-							<div class="image">
-								<a href="#">
-									<img class="img-fluid" src="images/brand_6.png" alt="icon">
-								</a>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-3 col-md-6 col-6">
-						<div class="brand_item bb_none">
-							<div class="image">
-								<a href="#">
-									<img class="img-fluid" src="images/brand_7.png" alt="icon">
-								</a>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-3 col-md-6 col-6">
-						<div class="brand_item bb_none br_none">
-							<div class="image">
 								<a href="#">
 									<img class="img-fluid" src="images/brand_8.png" alt="icon">
 								</a>
